...
    
    // метод заполнения алерта
    func presentAlertResult() {
        
        let message = presenter.makeResultsMessage()
        let alert = AlertModel(
            title: "Этот раунд окончен!",
            message: message,
            buttonText: "Сыграть еще раз",
            completion: { [weak self] in // слабая ссылка на self
                guard let self = self else { return }
                // обнуляем результаты текущей игры
                self.presenter.restartGame()
...
